--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
             <div class="event__details">
                 <h2 class="event__details__title">Doce</h2>
                 <p class="event__details__description">
-                    Doces, docinhos e doção. De todos os tamanhos, gostos e pessoas
+                    Doces, docinhos e doção. De todos os tamanhos e gostos.
                 </p>
             </div>
             <img class="event__image" src="./images/doces.jpg" alt="Front-end">
